// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withDefaults should overwrite default values 1`] = `
Array [
  Array [
    Object {
      "breakpoints": Object {
        "large": 300,
        "medium": 200,
        "small": 100,
        "xsmall": 0,
      },
    },
  ],
]
`;

exports[`withDefaults should provide default values 1`] = `
Array [
  Array [
    Object {
      "breakpoints": Object {
        "large": 3,
        "medium": 2,
        "small": 1,
        "xsmall": 0,
      },
    },
  ],
]
`;

exports[`withDefaults should provide values with defaults 1`] = `
Array [
  Array [
    Object {
      "AnchorComponent": [Function],
      "breakpoints": Object {
        "large": 3,
        "medium": 2,
        "small": 1,
        "xsmall": 0,
      },
    },
  ],
]
`;

exports[`withDefaults should still provide default values without Provider 1`] = `
Array [
  Array [
    Object {
      "breakpoints": Object {
        "large": 3,
        "medium": 2,
        "small": 1,
        "xsmall": 0,
      },
    },
  ],
]
`;
